// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageBody is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody testClass1 testClass2 emotion-euiPageBody"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPageBody panelled also accepts panelProps 1`] = `
<div
  class="euiPanel euiPanel--subdued euiPageBody emotion-euiPanel-grow-none-subdued-euiPageBody"
/>
`;

exports[`EuiPageBody panelled can be set to true 1`] = `
<div
  class="euiPanel euiPanel--plain euiPageBody emotion-euiPanel-grow-none-plain-hasShadow-euiPageBody"
/>
`;

exports[`EuiPageBody restrict width can be set to a custom number 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody testClass1 testClass2 emotion-euiPageBody-restrictWidth"
  data-test-subj="test subject string"
  style="max-width:1024px"
/>
`;

exports[`EuiPageBody restrict width can be set to a custom value and measurement 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody testClass1 testClass2 emotion-euiPageBody-restrictWidth"
  data-test-subj="test subject string"
  style="max-width:24rem"
/>
`;

exports[`EuiPageBody restrict width can be set to a default 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody testClass1 testClass2 emotion-euiPageBody-restrictWidth"
  data-test-subj="test subject string"
  style="max-width:1200px"
/>
`;
